Updated to 4.1 and multi-db, added demo server