@@ -2,13 +2,10 @@ package example.movies.backend;
 
 import example.movies.executor.CypherExecutor;
 import example.movies.executor.BoltCypherExecutor;
-import org.neo4j.helpers.collection.Iterators;
 
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.*;
-
-import static org.neo4j.helpers.collection.MapUtil.map;
 
 /**
  * @author mh
@@ -24,10 +21,14 @@ public class MovieService {
 
     private CypherExecutor createCypherExecutor(String uri) {
         try {
-            String auth = new URL(uri.replace("bolt","http")).getUserInfo();
+            URL url = new URL(uri.replaceAll("(bolt|neo4j(\\+s|\\+scc)?)", "http"));
+            String auth = url.getUserInfo();
+            String database = url.getPath();
+            if (database != null && !database.isBlank()) database = database.substring(1);
             if (auth != null) {
                 String[] parts = auth.split(":");
-                return new BoltCypherExecutor(uri,parts[0],parts[1]);
+                String boltUrl = uri.replace(auth + "@", "").replace("/" + database, "");
+                return new BoltCypherExecutor(boltUrl,parts[0],parts[1],database);
             }
             return new BoltCypherExecutor(uri);
         } catch (MalformedURLException e) {
@@ -36,48 +37,48 @@ public class MovieService {
     }
 
     public Map findMovie(String title) {
-        if (title==null) return Collections.emptyMap();
-        return Iterators.singleOrNull(cypher.query(
-                "MATCH (movie:Movie {title:{title}})" +
+        if (title==null) return Map.of();
+        var result = cypher.query(
+                "MATCH (movie:Movie {title:$title})" +
                 " OPTIONAL MATCH (movie)<-[r]-(person:Person)\n" +
-                " RETURN movie.title as title, collect({name:person.name, job:head(split(lower(type(r)),'_')), role:r.roles}) as cast LIMIT 1",
-                map("title", title)));
+                " RETURN movie.title as title, collect({name:person.name, job:head(split(toLower(type(r)),'_')), role:r.roles}) as cast LIMIT 1",
+                Map.of("title", title));
+        return result.isEmpty() ? Map.of() : result.get(0);
     }
 
     @SuppressWarnings("unchecked")
     public Iterable<Map<String,Object>> search(String query) {
         if (query==null || query.trim().isEmpty()) return Collections.emptyList();
-        return Iterators.asCollection(cypher.query(
+        return cypher.query(
                 "MATCH (movie:Movie)\n" +
-                " WHERE lower(movie.title) CONTAINS {part}\n" +
+                " WHERE toLower(movie.title) CONTAINS $part\n" +
                 " RETURN movie",
-                map("part", query.toLowerCase())));
+                Map.of("part", query.toLowerCase()));
     }
 
     @SuppressWarnings("unchecked")
     public Map<String, Object> graph(int limit) {
-        Iterator<Map<String,Object>> result = cypher.query(
+        var result = cypher.query(
                 "MATCH (m:Movie)<-[:ACTED_IN]-(a:Person) " +
                 " RETURN m.title as movie, collect(a.name) as cast " +
-                " LIMIT {limit}", map("limit",limit));
+                " LIMIT $limit", Map.of("limit",limit));
         List nodes = new ArrayList();
         List rels= new ArrayList();
         int i=0;
-        while (result.hasNext()) {
-            Map<String, Object> row = result.next();
-            nodes.add(map("title",row.get("movie"),"label","movie"));
+        for (var row : result) {
+            nodes.add(Map.of("title",row.get("movie"),"label","movie"));
             int target=i;
             i++;
             for (Object name : (Collection) row.get("cast")) {
-                Map<String, Object> actor = map("title", name,"label","actor");
+                Map<String, Object> actor = Map.of("title", name,"label","actor");
                 int source = nodes.indexOf(actor);
                 if (source == -1) {
                     nodes.add(actor);
                     source = i++;
                 }
-                rels.add(map("source",source,"target",target));
+                rels.add(Map.of("source",source,"target",target));
             }
         }
-        return map("nodes", nodes, "links", rels);
+        return Map.of("nodes", nodes, "links", rels);
     }
 }
